[tool.poetry]
name = "ecranner"
version = "0.0.1"
description = "Scan the vulnerability of Docker images stored in ECR"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
boto3 = "^1.9"
docker = "^4.0"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
flake8 = "^3.7"
pytest = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
ecranner = 'ecranner.cli:main'